@@ -25,9 +25,9 @@ recommended_bitrates = [
 recommended_qp = ["24 - recommended", "30 - standard", '50 - "I\'m just testing to see if this works"', "Custom"]
 
 
-class AV1(QtWidgets.QWidget):
+class SVT_AV1(QtWidgets.QWidget):
     def __init__(self, parent, main):
-        super(AV1, self).__init__(parent)
+        super(SVT_AV1, self).__init__(parent)
         self.main = main
         grid = QtWidgets.QGridLayout()
 
@@ -62,11 +62,11 @@ class AV1(QtWidgets.QWidget):
 
     def init_remove_hdr(self):
         layout = QtWidgets.QHBoxLayout()
-        remove_hdr_level = QtWidgets.QLabel("Remove HDR")
-        remove_hdr_level.setToolTip(
+        self.remove_hdr_label = QtWidgets.QLabel("Remove HDR")
+        self.remove_hdr_label.setToolTip(
             "Convert BT2020 colorspace into bt709\n " "WARNING: This will take much longer and result in a larger file"
         )
-        layout.addWidget(remove_hdr_level)
+        layout.addWidget(self.remove_hdr_label)
         self.widgets.remove_hdr = QtWidgets.QComboBox()
         self.widgets.remove_hdr.addItems(["No", "Yes"])
         self.widgets.remove_hdr.setCurrentIndex(0)
